revert add shadow nav. (invisible nav dropdown menu issue)

--- a/zeppelin-web/src/app/notebook/notebook.css
+++ b/zeppelin-web/src/app/notebook/notebook.css
@@ -76,7 +76,7 @@
 
 .navbar-fixed-top,
 .navbar-fixed-top .dropdown-menu {
-  z-index: 2000;
+  z-index: 10002;
 }
 
 .noteAction {
